Replace asset -> data
