# framework/src/modules/http_api/schema/swagger.yml
@@ -2589,7 +2589,7 @@ definitions:
       - publicKey
       - balance
       - unconfirmedBalance
-      - asset
+      - data
     properties:
       address:
         type: string
@@ -2615,7 +2615,7 @@ definitions:
         description: |
           The current unconfirmed balance of the account in Beddows.
           Includes unconfirmed transactions.
-      asset:
+      data:
         type: object
         description: |
           Displays additional account data.
